crates/snapshot-tests/tests/snapshots/parser__bad_strings__unterminated.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnterminatedString]: unterminated basic string, expected `"` at `foo`
  ┌─ unterminated:1:9
  │
1 │ foo = "\
  │         ^ expected `"`


error: unterminated basic string, expected `"` at `foo`
 --> unterminated:1:9
  |
1 | foo = "\
  |         ^ expected `"`
Error {
    kind: "UnterminatedString",
    message: "unterminated basic string, expected `\"`",
    span: 8..8,
    path: Some(
        "foo",
    ),
}
